--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^7.4.0",
+    "remix": "^2.16.3",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
