--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "remix": "remix vite:build"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
@@ -46,4 +47,5 @@
     "tailwindcss": "^4.0.8",
     "vite": "^6.2.3"
   }
+  
 }
