--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "remix": "remix vite:build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
@@ -25,7 +24,6 @@
     "react-dom": "^19.0.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^7.4.0",
-    "remix": "^2.16.3",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
@@ -47,5 +45,4 @@
     "tailwindcss": "^4.0.8",
     "vite": "^6.2.3"
   }
-  
 }
